--- a/src/assets/scss/theme/patterns/_split.scss
+++ b/src/assets/scss/theme/patterns/_split.scss
@@ -2,35 +2,35 @@
   &-item {
     position: relative;
 
-    &:nth-child(1):before {
-      content: "1";
-      font-size: 60px;
-      font-weight: 900;
-      position: absolute;
-      top: 20%;
-      left: -1%;
-      z-index: -1;
-      color: #3b60a8c2;
-    }
-    &:nth-child(2):before {
-      content: "2";
-      font-size: 60px;
-      font-weight: 900;
-      position: absolute;
-      top: 20%;
-      left: 53%;
-      z-index: -1;
-      color: #3b60a8c2;
-    }
-    &:nth-child(3):before {
-      content: "3";
-      font-size: 60px;
-      font-weight: 900;
-      position: absolute;
-      top: 12%;
-      left: -2%;
-      z-index: -1;
-      color: #3b60a8c2;
-    }
+    // &:nth-child(1):before {
+    //   content: "1";
+    //   font-size: 60px;
+    //   font-weight: 900;
+    //   position: absolute;
+    //   top: 20%;
+    //   left: -1%;
+    //   z-index: -1;
+    //   color: #3b60a8c2;
+    // }
+    // &:nth-child(2):before {
+    //   content: "2";
+    //   font-size: 60px;
+    //   font-weight: 900;
+    //   position: absolute;
+    //   top: 20%;
+    //   left: 53%;
+    //   z-index: -1;
+    //   color: #3b60a8c2;
+    // }
+    // &:nth-child(3):before {
+    //   content: "3";
+    //   font-size: 60px;
+    //   font-weight: 900;
+    //   position: absolute;
+    //   top: 12%;
+    //   left: -2%;
+    //   z-index: -1;
+    //   color: #3b60a8c2;
+    // }
   }
 }
