--- a/src/assets/scss/theme/sections/_features-tiles.scss
+++ b/src/assets/scss/theme/sections/_features-tiles.scss
@@ -1,5 +1,9 @@
 .features-tiles-item-image {
-	display: inline-flex;
-	border-radius: 50%;
-	background-color: get-color(primary, 3);
+  display: inline-flex;
+  border-radius: 50%;
+  background-color: get-color(primary, 3);
+  position: absolute;
+  top: -64px;
+  left: 50%;
+  transform: translateX(-50%);
 }
